# KoreaInvestment-Open-API-Voice-Trader

./: .gitignore  README.md  base_model_test.py  benchmark_kis.py  benchmark_redis.py  check_kis_config.py  debug_intraday.py  geminiapikey  kospi_code.mst  main.py  make.py  mock-buy-test.py  parsing.py  pyproject.toml  real-test.py  sample.csv  secret.json  server_load.sh  server_restart.sh  server_stop.sh  test_trading_redis.py
.gemini/: settings.json
final_stock_model/: config.json  generation_config.json
qwen2.5-7b-fine-tuning/: config.py  data.py  inference.py  main.py  model.py  trainer.py
qwen2.5-7b-fine-tuning/Qwen_singleGPU-v1/checkpoint-100/: rng_state.pth  trainer_state.json
qwen2.5-7b-fine-tuning/Qwen_singleGPU-v1/checkpoint-150/: rng_state.pth  scheduler.pt  trainer_state.json
qwen2.5-7b-fine-tuning/Qwen_singleGPU-v1/checkpoint-200/: rng_state.pth  scheduler.pt  trainer_state.json
qwen2.5-7b-fine-tuning/Qwen_singleGPU-v1/checkpoint-250/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
qwen2.5-7b-fine-tuning/Qwen_singleGPU-v1/checkpoint-300/: rng_state.pth  scheduler.pt  trainer_state.json
qwen2.5-7b-fine-tuning/Qwen_singleGPU-v1/checkpoint-50/: rng_state.pth  (+3 more)
qwen2.5-7b-fine-tuning/data/: preprocessed_data.xlsx  stock_trading_dataset_v2.xlsx
qwen2.5-7b-fine-tuning/wandb/: latest-run
src/ai/: analyzer.py
src/api/: domestic_stock_functions.py  kis_auth.py  vito_stt.py
src/services/: trading_service.py
src/utils/: mapper.py  redis_client.py
static/: style.css
stock_info/: stock_list.csv
templates/: index.html
(+21 files in other folders)
